--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Set up sdl dependency
+      run: |
+        apt-get install libsdl1.2-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
