--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: 3.8
     - name: Set up sdl dependency
       run: |
-        apt-get install libsdl1.2-dev
+        sudo apt-get install libsdl1.2-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
