--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: 3.8
     - name: Set up sdl dependency
       run: |
-        sudo apt-get install libsdl1.2-dev
+        sudo apt-get install libsdl1.2-dev python-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsmpeg-dev python-numpy subversion libportmidi-dev ffmpeg libswscale-dev libavformat-dev libavcodec-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
