--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -16,8 +16,12 @@
 name: Tencent Kubernetes Engine
 
 on:
-  release:
-    types: [created]
+  #release:
+  #  types: [created]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 # Environment variables available to all jobs and steps in this workflow
 env:
